# cgo-rpc

./: .gitignore  CMakeLists.txt  README.md  go.mod  main.c  main.go
c-src/: BookstoreWrapper.cpp  WBookstoreClient.cpp
cpp-src/: Bookstore.cpp  Bookstore.h  BookstoreClient.cpp  BookstoreClient.h  BookstoreServer.cpp  BookstoreServer.h  ClientMain.cpp  Serialization.h  ServerMain.cpp
cpp-src/test/: BookstoreClientMock.h  CMakeLists.txt  test_main.cpp
gen-src/: Bookstore.thrift  Types.thrift
gen-src/gen-cpp/: Types_types.cpp  Types_types.h
gen-src/gen-go/types/: GoUnusedProtection__.go  Types-consts.go  Types.go
gen-src/thrift/: Bookstore.thrift  Types.thrift
gen_src/: Types.thrift
go-src/Bookstore/: Bookstore.go  BookstoreCGo.go  BookstoreGolang.go  Bookstore_test.go
go_src/Bookstore/: Bookstore.go
include/: BookstoreWrapper.h
src/: Bookstore.cpp  Bookstore.h  BookstoreWrapper.cpp
src/Bookstore/: Bookstore.go
